# Devcasr

./:  .env  .env  README.md  app.py  main.py  pyproject.toml  requirements.txt
static/: auth.css  base.css  home.css  login.css  project.css  submit.css
templates/: auth.html  base.html  home.html  login.html  projects.html  signup.html  submit.html
